[fix] 시험 학생 조회시 빈 데이터 수정 #94